Spike the basic interaction of the app
* Add foundations of the underlying models
* Set up for Travis CI

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Chmodchecker</title>
-  <%= stylesheet_link_tag    'application', media: 'all' %>
+  <title>chmod checker</title>
+  <%= stylesheet_link_tag "application", media: "all" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
+<%= render "shared/flash" %>
 <%= yield %>
 
 </body>
